gcc/testsuite/gm2/errors/fail/badindrtype2.mod
MODULE badindrtype2 ;


PROCEDURE init (VAR ch: CHAR) ;
VAR
   c: CARDINAL ;
BEGIN
   c := ch
END init ;


VAR
   ch: CHAR ;
BEGIN
   init (ch)
END badindrtype2.
